# ATTerminal

./: CMakeLists.txt  README.md
include/: atterminal.h
lib/: CMakeLists.txt
src/: process.c  raw.c  send.c  setup.c  wait.c
